--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,3 @@
-config.value1= Config Value1 we get from Config Server
+config.value1= Edit Config Value1 we get from Config Server
 config.value2= Config Value2 we get from Config Server
 config.value3= Config Value3 we get from Config Server
